# unsui

./: .gitignore  AMIGAZEN.md  CONTRIBUTING.md  README.md
SDK/C/: Bison.simple  Move  banner  base64  basename  bc  bison  cat  cc  cmp  compress  cp  cron  date  dd  df  dirname  ed  env  expr  f2c  f77  false  file  flex  fmt  gawk  grep  head  less  m4  man  md5  md5sum  mkdir  newaush  nice  od  pexec  pr  (+20 more)
SDK/lib/: aterminfo.lib  aterminfonb.lib  aterminfonbr.lib  aterminfor.lib  curses.lib
src/Move/: funcs.h  list.c  move  move.c  move.man  smakefile
src/ar/: Makefile  Makefile.orig  append.c  ar  ar.0  ar.c  archive.c  archive.h  contents.c  delete.c  err.c  err.c.orig  err.h  extern.h  extract.c  misc.c  move.c  (+4 more)
src/ksh/: !README.AMIGA!  ChangeLog  ChangeLog copy  Makefile  Makefile.in  Product-Info  README.AMIGA  alloc.c  amiga.c  c_ksh.c  c_sh.c  config.h  configure  configure.in  edit.c  exec.c  getopts.c  io.c  jobs.c  ksh  ksh.1  ksh.man  lex.c  main.c  misc.c  proto.h  table.c  trap.c  tty.h  var.c  vi.c
src/ksh/archive/: pdksh-src.lha
src/ksh/etc/: ksh.kshrc  profile
src/ksh/ixpipe-handler/: ixpipe-handler  ixpipe-handler.c  misc.h
src/ksh/libs/: ixemul.library
src/ksh/manifests/: bin  src
src/ksh/sh/: ChangeLog  Makefile.in  alloc.c  amiga.c  c_ksh.c  c_sh.c  config.h.in  do_ulimit.c  edit.c  emacs.c  eval.c  exec.c  expr.c  getopts.c  history.c  io.c  jobs.c  lex.c  lex.h  mail.c  main.c  makefile  misc.c  patchlevel.h  proto.h  sh.h  table.c  table.h  trace.c  trap.c  tty.h  var.c  version.c  vi.c
src/ksh/std/stdc/: setvbuf.c  vprintf.c
(+1993 files in other folders)
