dnl Process this file with autoconf to produce a configure script.
AC_INIT(sh/sh.h)
AC_CONFIG_HEADER(sh/config.h)

# We want these before the checks, so the checks can modify their values.
test -z "$CFLAGS" && CFLAGS= auto_cflags=1
test -z "$LDFLAGS" && LDFLAGS=

AC_PROG_CC

# If we're using gcc and the user hasn't specified CFLAGS, add -O to CFLAGS.
test -n "$GCC" && test -n "$auto_cflags" && CFLAGS="$CFLAGS -O2"

AC_SUBST(CFLAGS)dnl
AC_SUBST(LDFLAGS)dnl

AC_PROG_CPP
AC_GCC_TRADITIONAL
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_STDC_HEADERS
AC_ALLOCA
AC_OUTPUT(Makefile sh/Makefile)
